test/parser/integer-literal-only-separator.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:9: error: hex literal must have at least one digit after '0x'
var i = 0x__;
